Closed
Bug 293147
Opened 21 years ago
Closed 21 years ago
Duplicating dock menu folder transfers the dock menu folder flag
Categories
(Camino Graveyard :: Bookmarks, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: englabenny, Assigned: sfraser_bugs)
Details
Attachments
(1 file)
|
994 bytes,
patch
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8b2) Gecko/20050502 Camino/0.8+
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8b2) Gecko/20050502 Camino/0.8+
If a bookmarks folder has the dock menu flag set (it's the dock menu), it
transfers this flag to the copy if it's duplicated (copy and paste or alt-drag)
That the flag is transferred does not mean that the dock menu is transferred
Reproducible: Always
Steps to Reproduce:
1. Select a folder to be dock menu
2. Duplicate (copy & paste)
3. View info -> the copy has the "dock menu" checkbox checked
Actual Results:
View info -> the copy has the "dock menu" checkbox checked
Expected Results:
View info -> the copy shouldn't have the "dock menu" checkbox checked
| Reporter | ||
Comment 1•21 years ago
|
||
Proposed fix: takes the special flags of the original, removes the dock menu
flag and sets that on the copy.
I can confirm this, I however do think we display bad behaviour because how is a
user to know that the dock menu will be transfered. I think it would be better
to keep the dock menu on the original folder instead of on the copy?
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Updated•21 years ago
|
Assignee: pinkerton → sfraser_bugs
| Reporter | ||
Comment 3•21 years ago
|
||
(In reply to comment #2)
> I can confirm this, I however do think we display bad behaviour because how is a
> user to know that the dock menu will be transfered. I think it would be better
> to keep the dock menu on the original folder instead of on the copy?
The patch does this. The folders' special flag is read, the dock menu flag is
subtracted, and the result is stored in the copied bookmark folder.
However, this will make us lose the dock menu flag when 'cut' eventually is
implemented.
| Assignee | ||
Comment 4•21 years ago
|
||
I committed the patch. We should address usability issues with the Dock Menu in
another bug.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•